# moduforge-demo

./: Cargo.toml  components.d.ts  package-lock.json  package.json  vite.config.ts
frontend/: components.d.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: LeftTreePanel.vue  MainLayout.vue  MultiTabView.vue  RightTablePanel.vue
frontend/src/views/: CxxmView.vue  FbfxView.vue  HomeView.vue  ProjectInfoView.vue
src/: App.vue  lib.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  router.rs
src-tauri/src/commands/: fbfx_csxm.rs  gcxm.rs  mod.rs
src-tauri/src/controller/: fbfx_csxm.rs  gcxm.rs  mod.rs
src-tauri/src/core/: collab_editor.rs  demo_editor.rs  mod.rs
src-tauri/src/initialize/: editor.rs  mod.rs
src-tauri/src/marks/: mod.rs
src-tauri/src/middleware/: collect_fbfx_csxm.rs
src-tauri/src/nodes/: djgc.rs  fbfx_csxm.rs  gcxm.rs  rcj.rs
src-tauri/src/plugins/: djgc.rs  fbfx_csxm.rs  inc.rs  mod.rs  rcj.rs
src-tauri/src/utils/: node.rs
src/api/: gcxm.ts
src/components/: LeftTreePanel.vue  MainLayout.vue  RightTablePanel.vue
src/composables/: useFbfxActions.ts  useFbfxTables.ts  useMainTabulator.ts  useRcjDetail.ts  useSubTabulator.ts
src/router/: index.ts
src/stores/: globalShortcuts.ts  history.ts
src/views/: FbfxView.vue  HomeView.vue
