[package]
name = "moduforge-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# lazy_static 线程安全全局变量
lazy_static = "1.4"
anyhow="1"

# 核心模块
moduforge-model ="0.4.2" 
moduforge-state ="0.4.2" 
moduforge-transform ="0.4.2" 
moduforge-core ="0.4.2" 
moduforge-macros ="0.4.2" 
moduforge-macros-derive ="0.4.2" 

# 规则引擎
moduforge-rules-engine ="0.4.2" 
moduforge-rules-expression ="0.4.2" 
moduforge-rules-template ="0.4.2" 
