[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.5.0"
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# lazy_static 线程安全全局变量
lazy_static = "1.4"
anyhow="1"

# 核心模块
moduforge-model ="0.4.2" 
moduforge-state ="0.4.2" 
moduforge-transform ="0.4.2" 
moduforge-core ="0.4.2" 
moduforge-macros ="0.4.2" 
moduforge-macros-derive ="0.4.2" 

# 规则引擎
moduforge-rules-engine ="0.4.2" 
moduforge-rules-expression ="0.4.2" 
moduforge-rules-template ="0.4.2" 

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.1"
