[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.5.0"
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
state= {version = "0.6.0", features = ["tls"] } # 状态管理
async-trait="0.1.88"     
dashmap = "6.1.0"   #
im = "15.1.0"
# lazy_static 线程安全全局变量
lazy_static = "1.4"
anyhow="1"
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# 核心模块
moduforge-model = {path = "../../moduforge-rs/crates/model"} 
moduforge-state = {path = "../../moduforge-rs/crates/state"} 
moduforge-transform = {path = "../../moduforge-rs/crates/transform"} 
moduforge-core = {path = "../../moduforge-rs/crates/core"} 
moduforge-macros = {path = "../../moduforge-rs/crates/macro"} 
moduforge-macros-derive = {path = "../../moduforge-rs/crates/derive"} 

# 规则引擎
moduforge-rules-engine = {path = "../../moduforge-rs/crates/engine"} 
moduforge-rules-expression = {path = "../../moduforge-rs/crates/expression"} 
moduforge-rules-template = {path = "../../moduforge-rs/crates/template"} 

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.1"
